# ufsm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/: CMakeLists.txt  cmdline.h  connector.cc  log.h  main.cpp
examples/auto_react_c17/: main.cc
examples/comprehensive_demo/: README.md  main.cc  main.cpp
examples/connector/: README.md  connector.cc  connector_state_machine.h
examples/led/: StateA.h  StateB.h  StateC.h  TestMachine.h  led.cc
examples/multi_layer_state_transition/: README.md  StateA.h  StateB.h  StateC.h  machine.h  main.cc
include/: ufsm.h
include/ufsm/: aux_macro.h  event.h  event_base.h  macros.h  reaction.h  result.h  rtti_policy.h  state.h  state_base.h  state_machine.h  type_list.h  ufsm.h  ufsm.hpp  util.h
include/ufsm/detail/: auto_react_c17.h  constructor.h  leaf_state.h  meta_debug.h  node_state.h  polymorphic_cast.h  state_base.h
include/ufsm/type/: list.h  noncopyable.h  rtti_policy.h
test/: CMakeLists.txt  README.md  test_context_access_behavior.cc  test_context_access_behavior.cpp  test_declarative_transition_behavior.cc  test_declarative_transition_behavior.cpp  test_deferral_behavior.cc  test_deferral_behavior.cpp  test_deferred_event_queue_behavior.cc  test_deferred_event_queue_behavior.cpp  test_destructor_behavior.cc  test_destructor_behavior.cpp  test_drill_down_behavior.cc  test_drill_down_behavior.cpp  test_entry_exit.cc  test_entry_exit.cpp  test_event_name_behavior.cc  test_event_name_behavior.cpp  test_event_routing_behavior.cc  test_event_routing_behavior.cpp  test_idempotency_behavior.cc  test_idempotency_behavior.cpp  test_multi_layer_lifecycle.cc  test_multi_layer_lifecycle.cpp  test_state_query_behavior.cc  test_state_query_behavior.cpp  test_support.h  test_transit_with_args.cc  test_transition_boundary_behavior.cc  test_transition_boundary_behavior.cpp  test_unhandled_event_hook_behavior.cc  test_unhandled_event_hook_behavior.cpp
